--- a/index.html
+++ b/index.html
@@ -8,8 +8,91 @@
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-    <!-- holiiii -->
-    <h1>Holiii</h1>
+   
+     <!-------------------------------INICIO------------------------------------------>
+   <!-------------------------------primera sección------------------------------------------>
+
+
+   <div class="container-fluid px-100">
+    <div class="row pt-100 ">
+        <div class="col-md-8 mx-auto text-center">
+            <p>Probablemente se acaban de enterar que su pequeño hijo o hija tiene síndrome de Down. Como padres de niños con este síndrome, entendemos que en este momento deben sentir mucha incertidumbre, miedo, soledad y quizá muchas otras sensaciones similares más...
+                <br>
+                Nosotros queremos decirles que ¡no están solos! y que sus niños, como sentirán en un tiempo más si no ahora, serán una alegría inmensa para sus familias. Sí significa más esfuerzo en brindarles más apoyo; más que con sus otros hijos (si los tiene), pero de ustedes depende que su hijo o hija tenga las herramientas necesarias para valerse por sí misma en muchos aspectos. Para eso ustedes contarán con profesionales quienes les ayudarán en este nuevo camino. Les aseguramos que a sus hijos hay algo que no es necesario enseñarles porque tienen de sobra, eso es el cariño y amor que entregan a los que los rodea día a día.
+            </p>
+        </div>
+    </div>
+
+
+    <div class="row py-100">
+        <div class="col-md-10 mx-auto">
+            <div class="row">
+                <div class="col-md-6">
+                    <img src="#" alt="">
+                </div>
+                <div class="col-md-6 text-center">
+                    <h1>¡Les queremos contar que se puede!​</h1>
+                </div>
+            </div>
+
+
+        </div>
+    </div>
+
+
+</div>
+
+
+
+
+<!-------------------------------Bienvenido a Holanda------------------------------------------>
+
+
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-md-8 mx-auto text-center">
+            <h2 class="mx-auto">Bienvenido a Holanda</h2>
+            <br>
+            <p>Este poema es una metáfora para describir la experiencia de tener un hijo con discapacidad, pero también puede aplicarse a cualquier situación inesperada en la vida. En esencia, este poema compara la vida con la planificación de un viaje a Italia, pero cuando llegas, te das cuenta de que has aterrizado en Holanda en su lugar.</p>
+        </div>
+
+
+        <div class="col-md-8">
+            <h4>Cita</h4>
+        </div>
+
+
+        <div class="col-md-2"></div>
+
+
+        <div class="col-md-2">
+            <!-- botón -->
+        </div>
+    </div>
+</div>
+
+<!-------------------------------Somos Aparid------------------------------------------>
+
+
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-md-1"></div>
+        <div class="col-md-4">
+            <img src="" alt="">
+        </div>
+        <div class="col-md-1"></div>
+        <div class="col-md-6">
+            <h2>Somos APARID</h2>
+            <br>
+            <p>Párrafo</p>
+        </div>
+
+
+    </div>
+
+
+</div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
